2008-03-31  Bastien Nocera  <hadess@hadess.net>

	* eggcellrendererkeys.c (grab_key_callback): Fix Esc and Backspace
	being bindable when Caps Lock is on (Closes: #524813)

2008-03-31  Bastien Nocera  <hadess@hadess.net>

        * gnome-keybinding-properties.c (append_keys_to_tree_from_file):
	Fix category headers not appearing properly in the
	treeview when using a non-UTF-8 locale (Closes: #513988)

2008-03-29  Jens Granseuer  <jensgr@gmx.net>

	* eggaccelerators.c: (egg_accelerator_parse_virtual): sync with
	gnome-settings-daemon

2008-03-29  Jens Granseuer  <jensgr@gmx.net>

	* eggaccelerators.c: (egg_accelerator_parse_virtual),
	(egg_virtual_accelerator_name), (egg_virtual_accelerator_label),
	(egg_keymap_resolve_virtual_modifiers),
	(egg_keymap_virtualize_modifiers), (reload_modmap),
	(egg_keymap_get_modmap):
	* eggaccelerators.h: fix mismatched modifier mapping between egg
	and GTK (so that e.g. <Super> works) and replace some custom
	functionality with stock GTK

2008-03-15  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keybinding-properties.c: (accel_edited_callback),
	(accel_cleared_callback), (start_editing_cb),
	(maybe_block_accels), (setup_dialog): stop widget accelerators
	from activating while the user is entering a new shortcut. This
	allows binding shortcuts that are used as accels in the capplet
	dialog, e.g. for the Help and Close buttons (bug #313228)

2008-03-14  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keybinding-properties.c: (append_keys_to_tree_from_file):
	remove debugging output

2008-02-02  Luca Ferretti  <elle.uca@libero.it>

	reviewed by: Jens Granseuer <jensgr@gmx.net>

	* 00-multimedia-key.xml.in:
	* 01-desktop-key.xml.in:
	Move Launch Calculator to Desktop group and sort
	all launch_app keybing together (Closes: #513867)

2007-10-31  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Distcheck fixes.

2007-08-05  Bastien Nocera  <hadess@hadess.net>

	reviewed by: Jens Granseuer <jensgr@gmx.net>
