@@ -1,3 +1,9 @@
+2008-04-01  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-keybinding-properties.c: (get_real_model), (clear_old_model),
+	(append_keys_to_tree), (accel_edited_callback): get rid of unneeded
+	sort model indirection
+
 2008-03-31  Bastien Nocera  <hadess@hadess.net>
 
 	* eggcellrendererkeys.c (grab_key_callback): Fix Esc and Backspace
